--- a/app/src/main/res/drawable/left_team_button_unfocused.xml
+++ b/app/src/main/res/drawable/left_team_button_unfocused.xml
@@ -2,16 +2,16 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
     <stroke
-        android:width="1dp"
-        android:color="#FFC62828" />
+        android:width="@dimen/LeftTeamButtonStrokeWidth"
+        android:color="@color/leftTeamButtonStroke" />
 
     <corners
-        android:radius="8dp" />
+        android:radius="@dimen/LeftTeamButtonCorners" />
 
     <gradient
-        android:startColor="#E57373"
-        android:centerColor="#F44336"
-        android:endColor="#E57373"
+        android:startColor="@color/leftTeamButtonLightColor"
+        android:centerColor="@color/leftTeamButtonDarkColor"
+        android:endColor="@color/leftTeamButtonLightColor"
         android:angle="90" />
 
 </shape>
