--- a/app/src/main/res/drawable/right_team_button_unfocused.xml
+++ b/app/src/main/res/drawable/right_team_button_unfocused.xml
@@ -2,16 +2,16 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
     <stroke
-        android:width="1dp"
-        android:color="#FF1565C0" />
+        android:width="@dimen/RightTeamButtonStrokeWidth"
+        android:color="@color/rightTeamButtonStroke" />
 
     <corners
-        android:radius="8dp" />
+        android:radius="@dimen/RightTeamButtonCorners" />
 
     <gradient
-        android:startColor="#2196F3"
-        android:centerColor="#64B5F6"
-        android:endColor="#2196F3"
+        android:startColor="@color/rightTeamButtonDarkColor"
+        android:centerColor="@color/rightTeamButtonLightColor"
+        android:endColor="@color/rightTeamButtonDarkColor"
         android:angle="90" />
 
 </shape>
