--- a/app/src/main/res/drawable/simple_button_press.xml
+++ b/app/src/main/res/drawable/simple_button_press.xml
@@ -2,16 +2,16 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
     <stroke
-        android:width="2dp"
-        android:color="#FF2E7D32" />
+        android:width="@dimen/SimpleButtonStrokeWidthPress"
+        android:color="@color/simpleButtonStroke" />
 
     <corners
-        android:radius="8dp" />
+        android:radius="@dimen/SimpleButtonCorners" />
 
     <gradient
-        android:startColor="#4CAF50"
-        android:centerColor="#81C784"
-        android:endColor="#4CAF50"
+        android:startColor="@color/simpleButtonDarkColor"
+        android:centerColor="@color/simpleButtonLightColor"
+        android:endColor="@color/simpleButtonDarkColor"
         android:angle="90" />
 
 </shape>
