--- a/app/src/main/res/drawable/simple_text.xml
+++ b/app/src/main/res/drawable/simple_text.xml
@@ -2,13 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
     <stroke
-        android:width="1dp"
-        android:color="#FF000000" />
+        android:width="@dimen/SimpleTextWidth"
+        android:color="@color/simpleTextStroke" />
 
     <corners
-        android:radius="8dp" />
+        android:radius="@dimen/SimpleTextCorner" />
 
     <solid
-        android:color="#ECEFF1" />
+        android:color="@color/simpleTextSolid" />
 
 </shape>
