--- a/app/src/main/res/drawable/team_right_text.xml
+++ b/app/src/main/res/drawable/team_right_text.xml
@@ -2,13 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
     <stroke
-        android:width="2dp"
-        android:color="#FF1565C0" />
+        android:width="@dimen/RightTeamTextWidth"
+        android:color="@color/teamRightTextStroke" />
 
     <corners
-        android:radius="8dp" />
+        android:radius="@dimen/RightTeamTextCorner" />
 
     <solid
-        android:color="#64B5F6" />
+        android:color="@color/teamRightTextSolid" />
 
 </shape>
